[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "science_on_crack_KAMACHI"
version = "0.0.1"
authors = [
    { name="Hugo Berendi", email="hugo.berendi@kamachi.dev" },
]
description = "SoC (long Science on Crack) is a python lib to calc diffrent things."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hugo-berendi/science_on_crack"
"Bug Tracker" = "https://github.com/hugo-berendi/science_on_crack/issues"
